--- a/manuscript/SI.qmd
+++ b/manuscript/SI.qmd
@@ -34,7 +34,7 @@ library(ggpubr)
 #| warning: false
 #| fig-cap: a) Daily temperature and soil moisture values, measured over the period of the experiment in the alpine and sub-alpine sites and b) average summer temperature and soil moisture between May and September. Shown are air (30 cm), ground (0 cm), soil temperature (-5 cm), and soil moisture measured with Tomst loggers between August 2019 and October 2022. Colour indicates the ambient (grey) and warming (pink) treatment. Air, ground and soil temperature were higher and soil moisture was lower in the warming treatment, indicated by the star in each panel.
 
-tar_load(daily_climate_figure)
+tar_load(daily_climate_figure, store = here::here(tar_config_get("store")))
 daily_climate_figure
 
 ```
@@ -47,7 +47,7 @@ daily_climate_figure
 #| fig-height: 4
 #| fig-cap: Annual productivity (mg m^-2^ y^-1^) and biomass consumption (mg m^-2^ y^-1) at the three study sites. Colors indicate grazed (yellow) and ungrazed (caged; gray) plots. Productivity and biomass consumption by grazers was assessed using three 30 x 30 cm cages (ungrazed) and according control plots (grazed). The cages were designed to exclude mammal herbivores, but not insects, with a mesh size of 1 cm. The plots were moved every 15.5 ± 0.447 days, and the biomass in each plot was harvested 2-3 cm above the ground, dried at 65°C for 72h and weighed. 
 
-tar_load(productivity_consumption_figure)
+tar_load(productivity_consumption_figure, store = here::here(tar_config_get("store")))
 productivity_consumption_figure
 
 ```
@@ -59,7 +59,7 @@ productivity_consumption_figure
 #| tbl-cap: Results from linear regression of the effects of warming on air, ground, and soil temperature and soilmoisture at the alpine and sub-alpine communities. Shown are estimates, standard error, t statistics and P value.
 
 
-tar_load(microclimate_stats)
+tar_load(microclimate_stats, store = here::here(tar_config_get("store")))
 microclimate_stats
 
 ```
@@ -71,7 +71,7 @@ microclimate_stats
 #| warning: false
 #| fig-cap: Global change impact on microclimate. Average summer (June - September) air, ground soil temperature and soil moisture between 2019 and 2022 with increasing nitrogen addition (kg N ha^-1^ y^-1^) at the alpine (upper row) and sub-alpine (lower row) site. The x axis is log transformed, the numbers are on the original scale for ease of interpretation. The colors indicate ambient (gray) and warm conditions (pink) and the shapes show the different grazing treatments (circle = control, square = medium, triangle = intensive grazing). The points show the raw data, while the lines indicate model predictions with confidence intervals. The capital letters within panels indicate significant model terms (W = warming).
 
-tar_load(climate_figure)
+tar_load(climate_figure, store = here::here(tar_config_get("store")))
 climate_figure
 ```
 
@@ -81,7 +81,7 @@ climate_figure
 #| label: tbl-climate
 #| tbl-cap: Anova table of the effects of warming, nitrogen addition, grazing, and their interactions on air, ground and soil temperature and soilmoisture at the alpine and sub-alpine communities. Shown are sum of Squares, degrees of freedom (df), F statistics and P value. Significant terms (P < 0.05) are in bold.
 
-tar_load(climate_stats)
+tar_load(climate_stats, store = here::here(tar_config_get("store")))
 climate_stats
 
 ```
@@ -256,9 +256,12 @@ graz_final_evenness[[1]]
 
 ### Supplementary Figure S11: Winner and loser traits in response to clipping
 
+NEED TO BE DELETED?
+
 ```{r}
 #| label: fig-traits-grazing
 #| echo: false
+#| eval: false
 #| message: false
 #| warning: false
 #| fig-width: 8
@@ -355,9 +358,12 @@ graz_change_evenness[[1]]
 
 ### Plant traits
 
+NEED TO BE DELETED?
+
 ```{r}
 #| label: fig-traits-large
 #| echo: false
+#| eval: false
 #| message: false
 #| warning: false
 #| fig-width: 10
@@ -369,6 +375,8 @@ tar_read(traits_figure, store = here::here(tar_config_get("store")))
 ```
 
 ### Biomass diversity relationship
+
+Change in div. Needed?
 
 ```{r}
 #| label: fig-bio
@@ -384,6 +392,7 @@ tar_read(standingB_div_change_figure, store = here::here(tar_config_get("store")
 ```{r}
 #| label: tbl-bio-div2
 #| echo: false
+#| eval: false
 #| warning: false
 #| tbl-cap: Model output for the relationship between standing biomass and Shannon diversity.
 
