--- a/manuscript/introduction.qmd
+++ b/manuscript/introduction.qmd
@@ -21,17 +21,7 @@ library(tarchetypes)
 
 <!--# [Mechanism] In alpine vegetation, including grassland, heath, and tundra, plant productivity is generally temperature limited and warmer climate will thus often result in increased plant growth, leading to more standing biomass [@elmendorf2012plot; @fazlioglu2021warming], with a positive feedback to productivity (@fig-concept a). These vegetation changes have implications for biodiversity, operating via changes in the nature and intensity of species interactions within alpine plant communities. In particular, as climate warms and biomass increases, we expect a shift from the facilitative plant-plant interactions that tend to dominate under high environmental stress towards the competitive interactions characteristic of more environmentally benign conditions, in line with the ‘Stress Gradient Hypothesis’; see e.g. [@bertness1994positive; @he2013global]. These shifts in the direction and intensity of the dominant plant-plant interactions in response to warming may again lead to changes in species composition and diversity, with lower-stature and less competitive alpine specialist species decreasing in abundance and diversity as they are exposed to increased competition for light from a taller and denser vegetation sward, an effect that may be exacerbated if they are exposed to more competitive range-shifting lowland generalists [@Vandvik2020-hu; @Alexander2015-gu; @lynn2023traits; @winkler2019responses]. Another global change driver with major impacts on the structure and diversity of terrestrial ecosystems, including alpine vegetation, is atmospheric nitrogen deposition [@Ipbes2019-sd]. As plant growth and biomass in alpine vegetation is often co-limited by temperature and nutrients [@Korner2003-kg], the specific effects of added nitrogen tend to be similar to those of increased temperature; increased growth, taller and denser vegetation, and intensified competition for light [@Humbert2016-wg] (@fig-concept a). Accordingly, an experiment that combined warming and nitrogen addition treatments in alpine vegetation found that both drivers have qualitatively similar effects; increased plant growth and loss of diversity via increased competition for light [@Klanderud2005-yx]. -->
 
-![Impacts of the global change drivers climate warming, atmospheric nitrogen deposition, and grazing on alpine plant communities, and the experimental design to assess interactions among multiple drivers. a) Schematic of the hypothesized impacts of these three major drivers on alpine plant diversity, illustrating how their impacts occur through the same ecological mechanisms (productivity, which again affects standing biomass). The plus and minus signs indicate the specific relationship between the drivers and mechanisms, and the rack-wheel indicates a positive feedback between productivity and biomass. b) Illustration of how the effect of grazing on diversity is related to standing biomass, and hence can be affected by warming or nitrogen addition. Positive values on the y axis indicate an increase and negative values a decrease in diversity in response to grazing (relative to ungrazed controls), and the grey solid line indicates no effect. The non solid dark grey lines shows the expected shifting effect of intermediate (dashed) and intensive (dotted) grazing intensity on diversity as standing biomass increases (see text). The yellow arrows exemplify conditions under which intermediate or intensive grazing is expected to decrease or increase diversity. The gray square indicates conditions under which grazing can be beneficial for diversity due to release from competitive plant-plant interactions as biomass is reduced, the white background indicates conditions under which grazing can reduce diversity due to loss of facilitative interactions as biomass is reduced. Nitrogen deposition and warming (brown and pink arrows) will shift the community towards higher biomass, with implications for the effect of grazing. c) A fully factorial experiment to assess warming, nitrogen addition and grazing replicated in two sites, an alpine and a sub-alpine plant community. Warmed communities were transplanted from the alpine to the sub-alpine or from the sub-alpine to the lowland site, in fully factorial combinations with grazing and nitrogen addition treatments. The treatments are ambient (gray), warming (pink), nitrogen deposition (gray to brown (ambient temperature) or pink to brown (warmed plots), crossed with four levels of simulated grazing (yellow); none (C), intermediate (one scissor), intensive (two scissors) and natural grazing (sheep). The arrows indicate the direction of transplant. Inset shows location of the study sites in Western Norway.](figures/concept.png){#fig-concept}
-
-```{r}
-#| label: fig-concept
-#| echo: false
-#| eval: false
-#| warning: false
-#| fig-cap: Impacts of the global change drivers climate warming, atmospheric nitrogen deposition, and grazing on alpine plant communities, and the experimental design to assess interactions among multiple drivers. a) Schematic of the hypothesized impacts of these three major drivers on alpine plant diversity, illustrating how their impacts occur through the same ecological mechanisms (productivity, which again affects standing biomass). The plus and minus signs indicate the specific relationship between the drivers and mechanisms, and the rack-wheel indicates a positive feedback between productivity and biomass. b) Illustration of how the effect of grazing on diversity is related to standing biomass, and hence can be affected by warming or nitrogen addition. Positive values on the y axis indicate an increase and negative values a decrease in diversity in response to grazing (relative to ungrazed controls), and the grey solid line indicates no effect. The non solid dark grey lines shows the expected shifting effect of intermediate (dashed) and intensive (dotted) grazing intensity on diversity as standing biomass increases (see text). The yellow arrows exemplify conditions under which intermediate or intensive grazing is expected to decrease or increase diversity. The gray square indicates conditions under which grazing can be beneficial for diversity due to release from competitive plant-plant interactions as biomass is reduced, the white background indicates conditions under which grazing can reduce diversity due to loss of facilitative interactions as biomass is reduced. Nitrogen deposition and warming (brown and pink arrows) will shift the community towards higher biomass, with implications for the effect of grazing. c) A fully factorial experiment to assess warming, nitrogen addition and grazing replicated in two sites, an alpine and a sub-alpine plant community. Warmed communities were transplanted from the alpine to the sub-alpine or from the sub-alpine to the lowland site, in fully factorial combinations with grazing and nitrogen addition treatments. The treatments are ambient (gray), warming (pink), nitrogen deposition (gray to brown (ambient temperature) or pink to brown (warmed plots), crossed with four levels of simulated grazing (yellow); none (C), intermediate (one scissor), intensive (two scissors) and natural grazing (sheep). The arrows indicate the direction of transplant. Inset shows location of the study sites in Western Norway.
-
-#knitr::include_graphics("figures/concept.png")
-```
+![Two alternative hypotheses of how the three global change drivers warming, nitrogen addition and clipping (or grazing) affect plant diversity. a) The three global change drivers warming, nitrogen addition and clipping (or grazing) affect plant diversity directly. b) The three drivers affect the plant diversity indirectly via standing biomass.](figures/hypotheses.png){#fig-concept}
 
 *\[Mechanism grazing\]* In contrast to warming and nutrient addition, grazing animals affect plant communities primarily through removing biomass and acting as disturbance agents through grazing and trampling, although we note that their effects on productivity are complex as they also add nutrients addition from urine and dung (@fig-concept a). Importantly, the effect of changes in biomass removal and disturbance on biodiversity should vary across environmental contexts, depending on the dominant biotic interactions within communities. Specifically, when environmental conditions are harsh, productivity low, and where facilitative interactions dominate, increased grazing is expected to lead to loss of facilitative interactions and may thus negatively impact diversity (white area in @fig-concept b). In contrast, in more productive systems, increased removal of biomass by grazers can lead to release from competitive interactions and hence increased diversity [@Austrheim2001-nu; @niedrist2009plant; @Bernes2015-yg; @frank2005interactive; @kaarlejarvi2017herbivores] (grey area in @fig-concept b). The magnitude of these effects of grazing on biodiversity thus depend both on the direction and intensity of plant-plant interactions within the vegetation (i.e., on productivity and/or environmental harshness, the x-axis in @fig-concept b) and on the intensity of grazing (i.e., the amount of biomass removed; dashed and dotted lines and arrows in @fig-concept b)[@cingolani2005grazing; @milchunas1988generalized; @milchunas1993quantitative].
 
@@ -41,4 +31,4 @@ library(tarchetypes)
 
 *\[Mountains\]* We tested these hypotheses in mountain grasslands, because they harbor unique biodiversity and provide important ecosystem functions and services such as carbon sequestration, water cycling, and grazing pastures; underpinning the lives and livelihoods of hundreds of millions of people [@egan2017mountain]. In many regions of the world, alpine vegetation has been managed for grazing and fodder production within socio-ecological systems of transhumance or mixed agriculture for centuries [@Austrheim2001-nu; @Bunce2004-kn]. During the last decades, faster warming at higher elevations have been observed at many mountain ranges[@Ipcc2022-jw; @pepin2015elevation; @Pepin2022-fy] and climate change impacts have changed species distributions [@steinbauer2018accelerated], community structure and dynamics [@Vandvik2020-hu; @Alexander2015-gu], and ecosystem functioning [@Ipbes2019-sd; @Schroter2005-dy; @Schirpke2013-kh] along elevational gradients. At the same time alpine ecosystems are affected by other global change drivers such as atmospheric nitrogen deposition [@Humbert2016-wg] and change in land use, including both intensification and abandonment of grazing regimes [@Austrheim2001-nu; @Shukla2019-es; @macdonald2000agricultural].
 
-[*Aim of the study*] The aim of this study is to assess if warmer climate, nitrogen addition, and grazing operate through the same mechanisms, namely standing biomass, on diversity in alpine and sub-alpine grasslands. In addition, we test if adaptive grazing practices can mediate negative impacts of warming and nitrogen addition on diversity. We used a fully factorial field experiment replicated across two sites, an alpine and a sub-alpine grassland in south-western Norway, representing different annual and growing season temperatures and consequently plant productivity (Supplementary Figures S1 and S2a). The two sites reflect two different environmental contexts, i.e., different positions along the productivity gradient (x axis, @fig-concept b). These grasslands are grazed by domestic and natural grazers, with the extant grazing pressure decreasing with elevation (Supplementary Figure S2b). Alpine and sub-alpine plant communities were exposed to a combination of warmer climate (transplant to lower elevation), increased nitrogen deposition (seven levels ranging between 0 and 100 kg N ha^-1^ y^-1^), and simulated grazing by clipping and removing biomass at two different intensities (@fig-concept c). Plant communities moved to lower elevation experienced an approximately 3°C increase in average growing season temperature (air: 3.09 ± 0.186 °C, ground: 3.06 ± 0.176 °C, and soil: 2.82 ± 0.142 °C; Supplementary Figure S1, Table S1). We applied a large range of nitrogen levels to simulate nitrogen addition close to and well beyond the current atmospheric nitrogen deposition in the mountains in south-western Norway [@aas2023monitoring] (2-3 kg N ha^-1^ y^-1^) and the critical load for change in species composition in alpine grasslands [@bobbink2011review] (c. 5-10 kg N ha^-1^ y^-1^). Our understanding of environmentally extreme conditions is limited, and such simulations can provide a mechanistic understanding of thresholds for community change [@Kayler2015-pr]. We simulated grazing by clipping because our main interest was in the effect of biomass removal, however, we also had naturally grazed plots outside the fenced area to account for the difference between grazing by animals and clipping (@fig-concept c). After three years of global change treatments, we harvested standing biomass at peak growing season and assessed the change in vascular plant species composition and diversity.
+[*Aim of the study*] The aim of this study is to assess if warmer climate, nitrogen addition, and grazing operate through the same mechanisms, namely standing biomass, on diversity in alpine and sub-alpine grasslands. In addition, we test if adaptive grazing practices can mediate negative impacts of warming and nitrogen addition on diversity. We used a fully factorial field experiment replicated across two sites, an alpine and a sub-alpine grassland in south-western Norway, representing different annual and growing season temperatures and consequently plant productivity (Supplementary Figures S1 and S2a). The two sites reflect two different environmental contexts, i.e., different positions along the productivity gradient (x axis, @fig-concept b). These grasslands are grazed by domestic and natural grazers, with the extant grazing pressure decreasing with elevation (Supplementary Figure S2b). Alpine and sub-alpine plant communities were exposed to a combination of warmer climate (transplant to lower elevation), increased nitrogen deposition (seven levels ranging between 0 and 100 kg N ha^-1^ y^-1^), and simulated grazing by clipping and removing biomass at two different intensities (@fig-methods). Plant communities moved to lower elevation experienced an approximately 3°C increase in average growing season temperature (air: 3.09 ± 0.186 °C, ground: 3.06 ± 0.176 °C, and soil: 2.82 ± 0.142 °C; Supplementary Figure S1, Table S1). We applied a large range of nitrogen levels to simulate nitrogen addition close to and well beyond the current atmospheric nitrogen deposition in the mountains in south-western Norway [@aas2023monitoring] (2-3 kg N ha^-1^ y^-1^) and the critical load for change in species composition in alpine grasslands [@bobbink2011review] (c. 5-10 kg N ha^-1^ y^-1^). Our understanding of environmentally extreme conditions is limited, and such simulations can provide a mechanistic understanding of thresholds for community change [@Kayler2015-pr]. We simulated grazing by clipping because our main interest was in the effect of biomass removal, however, we also had naturally grazed plots outside the fenced area to account for the difference between grazing by animals and clipping (@fig-concept c). After three years of global change treatments, we harvested standing biomass at peak growing season and assessed the change in vascular plant species composition and diversity.
