Start SEM section by saying which analysis was done.

--- a/manuscript/SEM_output.qmd
+++ b/manuscript/SEM_output.qmd
@@ -106,7 +106,7 @@ standingB_div_final_result |>
 
 ### Do global change drivers operate on diversity through the same mechanisms?
 
-We expected warming, nitrogen addition and clipping to operate on Shannon diversity through the same mechanisms, namely standing biomass (H1). Warming and nitrogen addition had the expected positive effect on standing biomass, while clipping had a negative effect (@fig-cut-final-diversity a and b; Supplementary Table S4). The three global change drivers operated on diversity through standing biomass only at the alpine site and increased standing biomass resulted in a negative net effect on diversity. Interestingly, warming also had a direct positive effect on diversity. Contrary, at the sub-alpine site, the three global change drivers had the same effect on standing biomass, but did not indirectly affect diversity. However, warming and nitrogen addition had a direct negative effect on diversity.
+To test if warming, nitrogen addition and clipping to operate on Shannon diversity through the same mechanisms, namely standing biomass (H1), we ran a structural equation model. Warming and nitrogen addition had the expected positive effect on standing biomass, while clipping had a negative effect (@fig-cut-final-diversity a and b; Supplementary Table S4). The three global change drivers operated on diversity through standing biomass only at the alpine site and increased standing biomass resulted in a negative net effect on diversity. Interestingly, warming also had a direct positive effect on diversity. Contrary, at the sub-alpine site, the three global change drivers had the same effect on standing biomass, but did not indirectly affect diversity. However, warming and nitrogen addition had a direct negative effect on diversity.
 
 ```{r}
 #| label: fig-cut-final-diversity
