--- a/manuscript/SEM_output.qmd
+++ b/manuscript/SEM_output.qmd
@@ -132,7 +132,58 @@ At the alpine site, all traits except moisture responded to warming. The light r
 
 At the sub-alpine site, less traits responded to the global change drivers and biomass. Plant height and moisture increased with warming. Light, reaction (pH), and salinity decreased and temperature increased with nitrogen addition. Plant height decreased with grazing intensity. Light, pH and temperature decreased with increasing standing biomass, while moisture and plant height increased.
 
-### Warming
+#### Affinity and trait PCA
+
+```{r}
+#| label: fig-trait-pca
+#| echo: false
+#| message: false
+#| warning: false
+#| fig-width: 12
+#| fig-height: 10
+#| fig-cap: Principal Component Analysis (PCA) of trait data showing the distribution of plots in trait space. Panels show a) affinity traits (plant height, temperature, light, moisture, nutrients, reaction) for alpine site, b) affinity traits for sub-alpine site, c) morphological traits (plant height, dry mass, leaf area, leaf thickness, SLA, LDMC) for alpine site, and d) morphological traits for sub-alpine site. Colors indicate warming treatment (grey = ambient, pink = warming), shapes indicate clipping treatment (circle = control, square = medium, triangle = intensive), and point size indicates nitrogen addition level. Arrows show trait loadings on the first two principal components.
+
+tar_load(trait_pca_plot, store = here::here(tar_config_get("store")))
+
+trait_pca_plot
+
+```
+
+### 
+
+#### Affinity SEM
+
+```{r}
+#| label: fig-cut-affinity
+#| echo: false
+#| message: false
+#| fig-width: 10
+#| fig-height: 10
+#| fig-cap: Structural equation model showing the direct effects of the global change drivers, warming, nitrogen addition and cutting and indirectly through biomass on affinity PCA scores a) for the alpine and b) sub-alpine site. The numbers indicate the regression coefficients, the linetype shows the strength (solid = significant, thick dashed = trend, and thin dashed = non-significant), and the colour the direction of the effect (blue = positive, red = negative). 
+
+tar_load(cut_affinity, store = here::here(tar_config_get("store")))
+
+cut_affinity[[1]]
+
+```
+
+#### Trait SEM
+
+```{r}
+#| label: fig-cut-traits
+#| echo: false
+#| message: false
+#| fig-width: 10
+#| fig-height: 10
+#| fig-cap: Structural equation model showing the direct effects of the global change drivers, warming, nitrogen addition and cutting and indirectly through biomass on morphological trait PCA scores a) for the alpine and b) sub-alpine site (PC1), and c) for the alpine and d) sub-alpine site (PC2). The numbers indicate the regression coefficients, the linetype shows the strength (solid = significant, thick dashed = trend, and thin dashed = non-significant), and the colour the direction of the effect (blue = positive, red = negative). 
+
+tar_load(cut_traits, store = here::here(tar_config_get("store")))
+
+cut_traits[[1]]
+
+```
+
+### Affinity distributions: warming
 
 ```{r}
 #| label: fig-traits-warming
@@ -205,5 +256,3 @@ tar_load(trait_stats_table)
 trait_stats_table
 
 ```
-
-###
